# giganotes-core

./: Cargo.toml  README.md
protos/: messages.proto
src/: core.rs  lib.rs
src/proto/: messages.rs  mod.rs
