[package]
name = "giganotes-core"
version = "1.0.0"
authors = ["itserg <itserg2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
protobuf = "2.17.0"
tantivy = "0.13.0"
rusqlite = {version = "0.24.0", features = ["bundled"]}
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
log = "0.4.11"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = { version = "0.8", features = ["v4"] }
html2text = "0.2.1"
http = "0.2.1"
frank_jwt = "3.1.2"

[build-dependencies]
protoc-rust = "2.17.0"
